drkns 2025-06-20 22:06:53+01:00 - build 217

1. Correction of 214.

drkns 2025-06-20 20:03:46+01:00 - build 216

1. Correction of 215.

drkns 2025-06-19 21:34:03+01:00 - build 215

1. Normalize CPU usage for multiprocessor systems.

drkns 2025-06-14 01:25:36+01:00 - build 214

1. Fix display of _Total.

drkns 2025-06-13 21:26:49+01:00 - build 213

1. Use more reliable data source for basic process information if possible.

2. Minor fixes.

3. Refactoring.

drkns 2025-06-12 23:34:06+01:00 - build 212

1. Fix spurious and unpredictable sorting.

drkns 2025-05-17 01:50:55+01:00 - build 211

1. Various WOW64-related fixes.

2. Fix hanging on reading handle data.

3. Restore "Include unnamed handles" option.

4. Refactoring.

drkns 2024-01-27 16:45:12+00:00 - build 210

1. gh-782: Stack corruption in Process list plugin.

drkns 2023-05-08 19:32:14+01:00 - build 209

1. Enable consteval in fmt.

drkns 2023-04-04 17:24:23+01:00 - build 208

1. Correction of 207.

2. Deadlock in handles reading.

drkns 2023-01-10 17:41:03+00:00 - build 207

1. gh-604 again.

drkns 2023-01-09 23:58:25+00:00 - build 206

1. gh-604: Process list plugin does not synchronize sort modes menu with sort order.

drkns 2022-10-31 17:38:11+00:00 - build 205

1. Continue 204.

drkns 2022-10-29 17:31:51+01:00 - build 204

1. More robust perf data read.

drkns 2021-11-14 18:48:42+00:00 - build 203

1. Move WMI refresh to a separate thread.

2. Fix other refresh-related issues.

drkns 2021-06-29 01:43:50+01:00 - build 202

1. Refresh the panel using ACTL_SYNCHRO.

drkns 2020-10-25 19:00:44+00:00 - build 201

1. An attempt to fix M#0003823 - performance counters can't be read on localised OS.

drkns 2020-09-20 01:27:58+01:00 - build 200

1. Various sort menu fixes and improvements.

2. Minor corrections.

drkns 2020-04-23 01:45:14+03:00 - build 199

1. Некорректное отображение имен некоторых хендлов.

drkns 2020-04-19 01:44:38+03:00 - build 198

1. Продолжение 197.
