@@ -110,6 +110,7 @@
 "Памяць, якая занята працэсам"
 "Працоўнае мноства"
 "Працоўнае мноства, пік"
+"Working Set - Private"
 "IO - усяго байтаў"
 "IO - усяго дзеяў"
 "Байтаў пры іншых дзеях"
@@ -137,6 +138,7 @@
 "ЗанятаПрацэсам"
 "Памяць"
 "ПамяцьПік"
+"Priv Mem Usage"
 "IOБайтаў"
 "Бт/с"
 "IOАпер"
