@@ -110,6 +110,7 @@
 "Privátní Byty"
 "Pracovní Sada"
 "Pracovní Sada vrchol"
+"Working Set - Private"
 "IO data Bytů"
 "IO data operací"
 "IO ostatní Byty"
@@ -137,6 +138,7 @@
 "Privátní Byty"
 "Využití Mem"
 "Vrchol využití Mem"
+"Priv Mem Usage"
 "IO Byty"
 "Byt/s"
 "IO Oper"
