@@ -110,6 +110,7 @@
 "Pamięć prywatna (bajty)"
 "Zestaw roboczy"
 "Szczyt zestawu roboczego"
+"Working Set - Private"
 "Dane IO (bajty)"
 "Dane IO (operacje)"
 "Inne IO (bajty)"
@@ -137,6 +138,7 @@
 "Private Bytes"
 "Użycie pam."
 "Maks użycie pam."
+"Priv Mem Usage"
 "Bajtów IO"
 "Bajt/s"
 "Oper. IO"
