@@ -110,6 +110,7 @@
 "Private Bytes"
 "Working Set"
 "Working Set Peak"
+"Working Set - Private"
 "IO Data Bytes"
 "IO Data Operations"
 "IO Other Bytes"
@@ -137,6 +138,7 @@
 "Private Bytes"
 "Mem Usage"
 "Peak Mem Usage"
+"Priv Mem Usage"
 "IO Bytes"
 "Byt/s"
 "IO Oper"
