@@ -110,6 +110,7 @@
 "Private Bytes"
 "Рабочее множество"
 "Рабочее множество, пик"
+"Working Set - Private"
 "IO - всего байт"
 "IO - всего операций"
 "Байт при проч. опер."
@@ -137,6 +138,7 @@
 "Private Bytes"
 "Память"
 "ПамятьПик"
+"Priv Mem Usage"
 "IOБайт"
 "Бт/с"
 "IOОпер"
