@@ -110,6 +110,7 @@
 "Bytes Privados"
 "Working Set"
 "Working Set Peak"
+"Working Set - Private"
 "IO Data Bytes"
 "IO Data Operations"
 "IO Other Bytes"
@@ -137,6 +138,7 @@
 "Bytes Privados"
 "Uso Mem"
 "Pico Uso Mem"
+"Priv Mem Usage"
 "IO Bytes"
 "Byt/s"
 "IO Oper"
