@@ -110,6 +110,7 @@
 "Приватн. байт"
 "Робоча множина"
 "Робоча множина, пік"
+"Working Set - Private"
 "IO - усього байт"
 "IO - усього операцій"
 "Байт при інш. опер."
@@ -137,6 +138,7 @@
 "Приватн. байт"
 "Пам'ять"
 "ПамятьПік"
+"Priv Mem Usage"
 "IOБайт"
 "Бт/с"
 "IOОпер"
