@@ -115,6 +115,7 @@ enum
 	MPrivateBytes,
 	MWorkingSet,
 	MWorkingSetPeak,
+	MWorkingSetPrivate,
 	MIODataBytes,
 	MIODataOperations,
 	MIOOtherBytes,
@@ -142,6 +143,7 @@ enum
 	MColPrivateBytes,
 	MColWorkingSet,
 	MColWorkingSetPeak,
+	MColWorkingSetPrivate,
 	MColIODataBytes,
 	MColIODataBytesS,
 	MColIODataOperations,
