@@ -1,3 +1,7 @@
+drkns 2025-06-21 22:21:00+01:00 - build 218
+
+1. Expose "Working Set - Private" performance counter.
+
 drkns 2025-06-20 22:06:53+01:00 - build 217
 
 1. Correction of 214.
